<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:gravity="center_horizontal"
        android:text="@string/rate_title_text"
        android:textSize="41sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_bad"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="192dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/bad"
            android:paddingBottom="8dp"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/abeezee"
            android:gravity="center_horizontal"
            android:text="@string/title_bad"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_good"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="192dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cv_nice"
        app:layout_constraintStart_toEndOf="@+id/cv_bad"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/so"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/abeezee"
            android:gravity="center_horizontal"
            android:text="@string/title_good"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold|italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_nice"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="192dp"
        android:layout_height="200dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/good"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/abeezee"
            android:gravity="center_horizontal"
            android:text="@string/title_nice"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold|italic" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/view_all_results"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_lock"
        tools:ignore="VectorDrawableCompat" />



</androidx.constraintlayout.widget.ConstraintLayout>